--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "@muft/dot",
-  "version": "1.0.1",
+  "name": "@muft/dailyfns",
+  "version": "0.0.5",
   "description": "These package contains everyday use functions.",
   "author": "Aman Khanakia",
   "license": "MIT",
   "homepage": "https://khanakia.com",
-  "main": "./dist/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "umd:main": "dist/index.umd.js",
+  "unpkg": "dist/index.umd.js",
+  "jsdelivr": "dist/index.umd.js",
+  "types": "dist/dts/index.d.ts",
   "publish": "npm publish --access public",
   "scripts": {
     "build": "rollup -c",
